# QorzenOxide

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DESIGN_GUIDE.md  Dockerfile  PLUGIN_DEVELOPMENT.md  PLUGIN_USE_GUIDE.md  README.md  SECURITY.md  Trunk.toml  build.rs  crates.js  deny.toml  help.html  index.html  macro.api_route!.html  macro.define_event.html  macro.log_debug.html  macro.log_info.html  macro.ui_component.html  package-lock.json  package.json  plugins.toml  pyproject.toml  release.ps1  requirements.txt  search-index.js  settings.html  sidebar-items.js  src-files.js  tailwind.config.js
.github/: FUNDING.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report_template.md  discussion.md  feature_request_template.md
.github/workflows/: ci.yml  process_source.yml
auth/: enum.AuthProviderType.html  sidebar-items.js  struct.PermissionCache.html  struct.TokenPair.html  struct.UserSession.html  trait.UserStore.html
concurrency/: enum.ThreadPoolType.html  struct.ThreadPoolConfig.html  struct.ThreadPoolStats.html
concurrency/utils/: fn.synchronize_at_barrier.html
config/: index.html  plugins.toml  struct.ConcurrencyConfig.html  struct.EventBusConfig.html  struct.SecurityConfig.html
config/tiered/: enum.ValidationRuleType.html  enum.ValidationSeverity.html  sidebar-items.js  struct.ConfigChangeEvent.html  struct.ConfigMerger.html  struct.ConfigWatcher.html
error/: enum.ErrorSeverity.html  enum.FileOperation.html  index.html
event/: sidebar-items.js  struct.EventFilter.html  struct.EventStats.html
examples/: advanced.rs  basic.rs
file/: enum.FileChangeType.html  enum.FileType.html  fn.calculate_file_hash.html  struct.FileOperationProgress.html
logging/: struct.DatabaseLogWriter.html  struct.HttpLogWriter.html  struct.LoggingManager.html  trait.LogWriter.html
manager/: enum.ManagerState.html  index.html  trait.Manager.html
platform/: index.html  sidebar-items.js  struct.PlatformCapabilities.html  struct.PlatformProviders.html
platform/database/: struct.Row.html  (+2 more)
plugin/: enum.ParameterType.html  index.html  struct.ApiExample.html  struct.ApiRoute.html  struct.MenuItem.html  struct.PluginApiProvider.html  struct.PluginDatabase.html  struct.PluginDependency.html
plugins/product-catalog-plugin/: Cargo.toml  plugin.json
plugins/product-catalog-plugin/src/: lib.rs
plugins/product-catalog-plugin/src/api/: handlers.rs
plugins/product-catalog-plugin/src/config/: mod.rs
plugins/product-catalog-plugin/src/models/: mod.rs
plugins/product-catalog-plugin/src/ui/: mod.rs
plugins/product_catalog/: Cargo.toml  plugin.toml
plugins/product_catalog/src/: lib.rs
processed_project/: Cargo.toml  Trunk.toml  build.rs  deny.toml  plugins.toml  pyproject.toml
processed_project/config/: plugins.toml
processed_project/plugins/product-catalog-plugin/: Cargo.toml
processed_project/plugins/product-catalog-plugin/src/: lib.rs
processed_project/plugins/product-catalog-plugin/src/api/: handlers.rs
processed_project/plugins/product-catalog-plugin/src/config/: mod.rs
processed_project/plugins/product-catalog-plugin/src/models/: mod.rs
processed_project/plugins/product-catalog-plugin/src/ui/: mod.rs
processed_project/plugins/product_catalog/: Cargo.toml  plugin.toml
processed_project/plugins/product_catalog/src/: lib.rs
processed_project/plugins/test_plugin/: Cargo.toml  plugin.toml
processed_project/plugins/test_plugin/src/: lib.rs
processed_project/scripts/: build_plugins.rs
processed_project/src/: concurrency.rs  error.rs  event.rs  file.rs  lib.rs  logging.rs  main.rs  manager.rs  task.rs  types.rs  utils_general.rs
processed_project/src/app/: core.rs  debug.rs  mod.rs  native.rs  wasm.rs
processed_project/src/auth/: mod.rs
processed_project/src/config/: mod.rs  tiered.rs
processed_project/src/platform/: database.rs  filesystem.rs  mod.rs  native.rs  network.rs  storage.rs  web.rs
processed_project/src/plugin/: config.rs  hot_reload.rs  loader.rs  manager.rs  manifest.rs  mod.rs  registry.rs  sdk.rs  search.rs
processed_project/src/ui/: app.rs  mod.rs  router.rs  state.rs
processed_project/src/ui/components/: mod.rs  plugin_manager_provider.rs  plugin_renderer.rs
processed_project/src/ui/layout/: footer.rs  header.rs  main_layout.rs  mod.rs  sidebar.rs
processed_project/src/ui/pages/: admin.rs  dashboard.rs  login.rs  logs.rs  mod.rs  not_found.rs  plugins.rs  profile.rs  settings.rs
processed_project/src/ui/services/: mod.rs  plugin_service.rs
processed_project/src/utils/: mod.rs  time.rs
public/: index.html
qorzen_desktop/: all.html  enum.Commands.html  fn.AppWithDesktopCSS.html  fn.check_health.html  fn.main.html  fn.print_system_info.html  fn.run_application_async.html  fn.run_dev_server.html  fn.run_headless_application.html  fn.run_headless_command.html  fn.run_ui_application.html  fn.setup_logging.html  fn.show_status.html  fn.validate_config.html  index.html  sidebar-items.js  struct.Cli.html
qorzen_oxide/: all.html  constant.VERSION.html  macro.api_route.html  macro.define_event!.html  macro.export_plugin.html  macro.log_error.html  macro.log_trace.html  macro.log_warn.html  macro.menu_item!.html  macro.menu_item.html  macro.plugin.html  macro.search_provider!.html  macro.search_provider.html  macro.ui_component!.html
scripts/: build_all.sh  build_plugins.rs  cargo_env.bat  ci-check.ps1  clean_build_all.sh  msvc_terminal.bat  release.ps1  strip_rust_source.py
src/: app.rs  concurrency.rs  config.rs  error.rs  event.rs  file.rs  lib.rs  logging.rs  main.rs  manager.rs  task.rs  types.rs  utils.rs  utils_general.rs
task/: struct.TaskBuilder.html  struct.TaskContext.html  struct.TaskManagerStats.html  struct.TaskStatusChangedEvent.html  trait.ProgressReporter.html
types/: sidebar-items.js  type.CorrelationId.html
ui/: enum.ActionStyle.html  index.html  sidebar-items.js  struct.Animations.html  struct.AppState.html  struct.NotificationAction.html  struct.PluginPanel.html  struct.UILayoutManager.html
utils/: index.html
utils_general/: sidebar-items.js
(+528 files in other folders)
