[package]
name = "qorzen-oxide"
version = "0.1.0"
edition = "2021"

[features]
default = []
desktop = ["dioxus/desktop", "native-deps"]
web = ["dioxus/web", "web-deps", "getrandom/js"]
native-deps = [
    "tokio/full",
    "notify",
    "dirs",
    "hostname",
    "flate2",
    "tracing-appender",
    "reqwest",
    "serde_yaml",
    "toml"
]
web-deps = [
    "wasm-bindgen",
    "wasm-bindgen-futures",
    "web-sys",
    "js-sys",
    "console_error_panic_hook",
    "wee_alloc",
]

[dependencies]
# Core dependencies (always included)
dioxus = { version = "0.5", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
futures = "0.3"
tracing = "0.1"
parking_lot = "0.12"
crossbeam = "0.8"
num_cpus = "1.0"
clap = { version = "4.0", features = ["derive"] }
rand = "0.8"
getrandom = { version = "0.2", optional = true, features = ["js"] }
uuid = { version = "1.0", features = ["v4", "serde", "js"] }
dashmap = "5.0"

# Conditional dependencies
tokio = { version = "1.0", features = ["macros", "rt"], optional = true }
tokio-util = { version = "0.7", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"], optional = true }
notify = { version = "6.0", optional = true }
dirs = { version = "5.0", optional = true }
hostname = { version = "0.3", optional = true }
flate2 = { version = "1.0", optional = true }
tracing-appender = { version = "0.2", optional = true }
reqwest = { version = "0.12", features = ["json"], optional = true }
serde_yaml = { version = "0.9", optional = true }
toml = { version = "0.8", optional = true }

# Web-only dependencies
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
web-sys = { version = "0.3", optional = true }
js-sys = { version = "0.3", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
wee_alloc = { version = "0.4", optional = true }

# Target-specific dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
wee_alloc = "0.4"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
js-sys = "0.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-util = "0.7"
reqwest = { version = "0.12", features = ["json"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

[build-dependencies]
rustc_version = "0.4"