[package]
name = "qorzen-oxide"
version = "0.1.0"
edition = "2021"

[features]
default = ["desktop"]
desktop = []
web = []

[dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde", "clock"], default-features = false }
async-trait = "0.1"
futures = "0.3"
tracing = "0.1"
parking_lot = "0.12"
crossbeam = "0.8"
uuid = { version = "1.0", features = ["v4", "serde", "js"] }
dashmap = "5.0"
rand = "0.8"

# Target-specific dependencies
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
dioxus = { version = "0.5", features = ["macro", "html", "desktop"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "sync", "time", "signal"] }
tokio-util = "0.7"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
clap = { version = "4.0", features = ["derive"] }
notify = "6.0"
dirs = "5.0"
hostname = "0.3"
flate2 = "1.0"
tracing-appender = "0.2"
reqwest = { version = "0.12", features = ["json"] }
serde_yaml = "0.9"
toml = "0.8"
sha2 = "0.10"
num_cpus = "1.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
dioxus = { version = "0.5", features = ["macro", "html", "web"] }
tokio = { version = "1.0", features = ["sync", "macros", "rt", "time"], default-features = false }
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
#    "console",
#    "Window",
#    "Navigator",
#    "MediaDevices",
#    "Geolocation",
#    "ServiceWorkerContainer",
#    "Request",
#    "RequestInit",
#    "Response",
#    "Headers",
#    "Storage",
#    "ArrayBuffer",
#    "Uint8Array",
    "console",
    "Window",
    "Navigator",
    "Request",
    "RequestInit",
    "Response",
    "Headers",
    "Storage"
] }
js-sys = "0.3"
console_error_panic_hook = "0.1"
wee_alloc = "0.4"

[dev-dependencies]
tempfile = "3.10"