# Cargo.toml
[package]
name = "product-catalog-plugin"
version = "1.0.0"
edition = "2021"
authors = ["Example Company <dev@example.com>"]
description = "Product catalog management plugin for Qorzen Oxide"
license = "MIT"
repository = "https://github.com/example/product-catalog-plugin"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
qorzen-oxide = { path = "../../../qorzen_oxide" }
# qorzen-plugin-sdk = { path = "../../../qorzen-plugin-sdk" }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
dioxus = "0.4"
tracing = "0.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
web-sys = "0.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
sqlx = { version = "0.7", features = ["sqlite", "chrono", "uuid"] }