[package]
name = "product_catalog"
version = "0.1.0"
edition = "2021"

[lib]
name = "product_catalog"
crate-type = ["cdylib", "rlib"]

[dependencies]
qorzen_oxide = { path = "../../", features = ["default"] }
dioxus = { version = "0.6", features = ["macro", "html", "desktop", "router"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
tokio = { version = "1.0", features = ["macros", "rt", "sync"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
urlencoding = "2.1"
tracing = "0.1.41"

# For WASM compatibility
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["console", "Request", "Response", "Window"] }
js-sys = "0.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { version = "0.12", features = ["json"] }