# plugins/test_plugin/Cargo.toml
[package]
name = "test_plugin"
version = "0.1.0"
edition = "2021"
[lib]
name = "test_plugin"
crate-type = ["cdylib", "rlib"]
[dependencies]
qorzen_oxide = { path = "../../", features = ["default"] }
dioxus = { version = "0.6", features = ["macro", "html", "desktop", "router"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
tokio = { version = "1.0", features = ["macros", "rt", "sync"] }
tracing = "0.1"
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
